[package]
name = "preprompt-rs"
version = "0.1.0"
authors = ["Michael Lingelbach m.j.lbach@gmail.com"]
edition = "2021"
description = "A command-line tool to copy text file contents to the clipboard."
license = "MIT"
repository = "https://github.com/mjlbach/preprompt-rs"
readme = "README.md"
keywords = ["clipboard", "markdown", "text-files"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "prep"
path = "src/main.rs"

[dependencies]
walkdir = "2.3.2"
clipboard = "0.5.0"
structopt = "0.3"
infer = "0.15.0"
mime_guess = "2.0.4"
ignore = "0.4.20"
